# AutoFineTuner

./: .gitignore  cookbook.ipynb  dataset.py  environment.yml  output.py  pyproject.toml  readme.md  requirements.txt  target.py  프로젝트설명.txt
AutoFineTuner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AutoFineTuner/engine/: __init__.py  engine.py
AutoFineTuner/tool/: __init__.py  codeExcuter.py  codeLauncher.py  codeMaker.py  codeReader.py  json_tools.py  llms.py  paths.py  save_remove.py
AutoFineTuner/workflows/: __init__.py
AutoFineTuner/workflows/codeAnalyzer/: analyzer.py
AutoFineTuner/workflows/codeRefactor/: __init__.py  refactor.py
AutoFineTuner/workflows/codeRepair/: __init__.py  repair.py
AutoFineTuner/workflows/finetuningManager/: __init__.py  tuning_manager.py
AutoHPO/: notebook.ipynb  requirements.txt  test.ipynb  프로젝트설명.txt
AutoHPO/AutoFineTuner/: __init__.py  test.py
AutoHPO/AutoFineTuner/engine/: engine.py
AutoHPO/AutoFineTuner/tool/: codeLauncher.py
scripts/: finetune.sh  pipeline.sh
