[project]
name = "AutoFineTuner"
version = "0.1.0"
description = "LLM-guided refactor + finetuning manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["AutoFineTuner"]
